# lean-cargo-workspaces

./: Cargo.toml  README.md
.github/workflows/: release.yaml
crates/nissy_a/: Cargo.toml
crates/nissy_a/src/: lib.rs
crates/nissy_b/: Cargo.toml
crates/nissy_b/src/: lib.rs
crates/nissy_c/: Cargo.toml
crates/nissy_c/src/: lib.rs
crates/nissy_d/: Cargo.toml
crates/nissy_d/src/: lib.rs
crates/nissy_e/: Cargo.toml
crates/nissy_e/src/: lib.rs
crates/nissy_f/: Cargo.toml
scripts/: publish-crates.sh  publish.sh
